# garden-assistant

./: .gitignore  Dockerfile  README.md  app.py  main.py  models.py  pyproject.toml  pyvenv.cfg  requirements.txt  test_main.py  testing.db
.devcontainer/: Dockerfile  devcontainer.json
.dictionaries/: project-words.txt
app/: config.py  configurator.py  database.py  dependencies.py  main.py  models.py  populate.py  test_config.py
app/auth/: auth.py
app/database/: database.py  session.py
app/endpoints/: api_garden.py  api_user.py  bed.py  garden.py  pages.py  plant.py  planting.py
app/helpers/: garden.py  plant.py
app/models/: bed.py  garden.py  garden_models.py  plant.py  planting.py  relationships.py  user.py  user_models.py
app/routers/: api_user.py  bed.py  garden.py  pages.py  plant.py  planting.py
app/server/: main.py  uvicorn.py
config/: app_config.py
data/: plantings.json  plants.json
docs/: development-notes.md
migrations/: env.py
migrations/versions/: 36238de00ee6_initial_migration.py
requirements/: base.txt  dev.txt
templates/: beds.html  index.html  index.jinja2  plantings.html  table.html
templates/beds/: beds.html  beds.html.jinja2
templates/gardens/: gardens.html  gardens.html.jinja2  gardens.jinja2
templates/plantings/: plantings.html  plantings.html.jinja2
templates/plants/: plants.html  plants.html.jinja2  plants.jinja2
templates/shared/: _layout.html  (+2 more)
tests/: test_api_bed.py  test_api_garden.py  test_api_plant.py  test_api_planting.py  test_crud_plant.py  test_helpers_plant.py  test_main.py  test_populate.py
(+26 files in other folders)
